cmake_minimum_required(VERSION 3.0)

FILE(STRINGS "VERSION" VECTOR_VERSION)

PROJECT(vector
	LANGUAGES C
VERSION ${VECTOR_VERSION})


INCLUDE(${CMAKE_SOURCE_DIR}/cmake/CPackConfig.cmake)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/vector.spec.in" "${CMAKE_CURRENT_BINARY_DIR}/vector.spec" @ONLY IMMEDIATE)
SET(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_BINARY_DIR}/vector.spec")
SET(CPACK_PACKAGE_RELEASE 2)
SET(CPACK_RPM_PACKAGE_SOURCES ON)
INCLUDE(CPack)

ADD_SUBDIRECTORY("vector")

OPTION(VECTOR_BUILD_TESTS "Build unit tests" ON)
IF(VECTOR_BUILD_TESTS)
	enable_testing()
	# ADD_SUBDIRECTORY("test")
ENDIF(VECTOR_BUILD_TESTS)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/README.md" DESTINATION share/doc/libscic-vector/)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" DESTINATION share/licenses/libscic-vector/)
