INCLUDE_DIRECTORIES(../.)
INCLUDE_DIRECTORIES(../include)

SET(VECTOR_SUBDIRS
	vector
)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Release)
	MESSAGE(STATUS "No CMAKE_BUILD_TYPE specified, using default RELEASE")
ENDIF()
MESSAGE(STATUS "Built type is set to ${CMAKE_BUILD_TYPE}")

IF(CMAKE_COMPILER_IS_WINDOWS)
	SET(CMAKE_DEBUG_POSTFIX d)
ENDIF()

# unit tests do not use strict-prototypes, so this is here
IF(CMAKE_COMPILER_IS_GNUC OR CMAKE_COMPILER_IS_CLANG)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wstrict-prototypes")
ENDIF()

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

foreach(subdir ${VECTOR_SUBDIRS})
    add_subdirectory(${subdir})
    set(VECTOR_LIB_SRCS ${VECTOR_LIB_SRCS} $<TARGET_OBJECTS:${subdir}>)
endforeach()

OPTION(VECTOR_BUILD_STATIC "Build static library" ON)
IF(VECTOR_BUILD_STATIC)
	ADD_LIBRARY(scic-vector-static STATIC ${VECTOR_LIB_SRCS})
	SET_TARGET_PROPERTIES(scic-vector-static PROPERTIES LINKER_LANGUAGE C)

	find_library(SCIC_ERRNO_LIB scic-errno)
	target_link_libraries(scic-vector-static ${SCIC_ERRNO_LIB})

	if(CMAKE_COMPILER_IS_GNUC)
		SET_TARGET_PROPERTIES(scic-vector-static PROPERTIES OUTPUT_NAME "scic-vector")
	endif()
	list(APPEND VECTOR_LIB_TARGET scic-vector-static)
	SET_TARGET_PROPERTIES(scic-vector-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	IF(APPLE)
		SET_TARGET_PROPERTIES(scic-vector-static PROPERTIES MACOSX_RPATH ON)
	ENDIF()
ENDIF()


OPTION(VECTOR_BUILD_SHARED "Build shared library" ON)
IF(VECTOR_BUILD_SHARED)
	ADD_LIBRARY(scic-vector SHARED ${VECTOR_LIB_SRCS})
	SET_TARGET_PROPERTIES(scic-vector PROPERTIES LINKER_LANGUAGE C)
	SET_TARGET_PROPERTIES(scic-vector PROPERTIES VERSION ${PROJECT_VERSION})
	#SET_TARGET_PROPERTIES(scic-vector PROPERTIES SOVERSION 1)
	list(APPEND VECTOR_LIB_TARGET scic-vector)
	SET_TARGET_PROPERTIES(scic-vector PROPERTIES CLEAN_DIRECT_OUTPUT 1)

	find_library(SCIC_ERRNO_LIB scic-errno)
	target_link_libraries(scic-vector ${SCIC_ERRNO_LIB})

	IF(LINUX)
		# shared library should link to libm
		FIND_LIBRARY(M_LIB m)
		TARGET_LINK_LIBRARIES(scic-vector ${M_LIB})
	ENDIF()
	IF(APPLE)
		SET_TARGET_PROPERTIES(scic-vector PROPERTIES MACOSX_RPATH ON)
	ENDIF()
	#IF(CMAKE_COMPILER_IS_WINDOWS)
	#	SET_TARGET_PROPERTIES(scic-vector PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
	#ENDIF()
ENDIF()


IF(NOT VECTOR_BUILD_STATIC AND NOT VECTOR_BUILD_SHARED)
	MESSAGE(FATAL_ERROR "Both shared and static libraries are disabled. Please specify one or the other or both.")
ENDIF(NOT VECTOR_BUILD_STATIC AND NOT VECTOR_BUILD_SHARED)

IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET(LIB_SUFFIX "64")
ENDIF()

INSTALL(TARGETS ${VECTOR_LIB_TARGET}
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)
